# wizard

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/app/: 1.cpp  1.h  1.ui  2.cpp  2.h  2.ui  3.cpp  3.h  3.ui  4.cpp  4.h  4.ui  5.ui  CMakeLists.txt  main.cpp  searchwidget.ui
src/app/i18n/: translate_en.ts  translate_ru.ts
